# chat-pdf

./: Dockerfile  docker-compose.yml  frontend.py  graph.py  indexing.py  pyproject.toml  requirements.txt  server.py
